[metadata]
name = tkmauprueba
version = 0.1.0
author = Mauricio Zamora
author_email = mauricio.zamorahernandez.ucr@gmail.com
description = Ejemplo de interfaz Tkinter con Pandas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tu-usuario/tkmauprueba
project_urls =
    Bug Tracker = https://github.com/tu-usuario/tkmauprueba/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    pandas>=1.0.0
    numpy>=1.0.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    tkprueba = tkmauprueba.app:main